# Logger

./: CMakeLists.txt  README.md
exampels/: LoggerExample.cpp
include/: Logger.h
tests/: AsyncFileWriterTest.cpp  AsyncLoggerCoreTest.cpp  LoggerTest.cpp
tests/mocks/: FileWriterMock.h  LoggerCoreMock.h
